[tool.poetry]
name = "mqtt-asgi"
version = "0.1.0"
description = ""
authors = ["Alessandro Viganoonoo <alvistar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
asgiref = "^3.2.3"
paho-mqtt = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
